Fixed the misaligned navbar brand

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -42,6 +42,10 @@
       width: 2.5rem;
       margin-right: 1rem;
     }
+
+    h3 {
+      transform: translateY(3px);
+    }
   }
 
   &__list {
