--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -39,6 +39,7 @@
       display: flex;
       align-items: center;
       img { width: 2.5rem; margin-right: 1rem; }
+      h3 { transform: translateY(3px); }
     }
   }
 
