--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -24,6 +24,10 @@
         width: 2.5rem;
         margin-right: 1rem;
       }
+
+      h3 {
+        transform: translateY(3px);
+      }
     }
 
     button {
